lib_LTLIBRARIES = libsdo.la
libsdo_la_SOURCES = ChangedDataObjectList.cpp DASDataFactoryImpl.cpp DataFactory.cpp Logger.cpp SdoCheck.cpp SettingList.cpp XMLHelper.cpp \
ChangedDataObjectListImpl.cpp DASDataObject.cpp DataObject.cpp Property.cpp SdoRuntime.cpp Type.cpp XpathHelper.cpp \
ChangeSummary.cpp DASProperty.cpp DataObjectImpl.cpp PropertyImpl.cpp SDORuntimeException.cpp TypeHelper.cpp XSDHelper.cpp \
ChangeSummaryImpl.cpp DASType.cpp DataObjectList.cpp PropertyList.cpp Sequence.cpp TypeImpl.cpp \
CopyHelper.cpp DASValue.cpp DataObjectListImpl.cpp RefCountingObject.cpp SequenceImpl.cpp TypeList.cpp \
DASDataFactory.cpp DASValues.cpp EqualityHelper.cpp RefCountingPointer.cpp Setting.cpp XMLDocument.cpp \
ChangedDataObjectList.h DASDataFactoryImpl.h DataFactory.h export.h RefCountingPointer.h Sequence.h TypeImpl.h \
ChangedDataObjectListImpl.h DASDataObject.h DataObject.h Logger.h SdoCheck.h SequenceImpl.h TypeList.h \
ChangeSummary.h DASProperty.h DataObjectImpl.h Property.h SDO.h Setting.h XMLDocument.h \
ChangeSummaryImpl.h DASType.h DataObjectList.h PropertyImpl.h SDORuntimeException.h SettingList.h XMLHelper.h \
CopyHelper.h DASValue.h DataObjectListImpl.h PropertyList.h SdoRuntime.h Type.h XpathHelper.h \
DASDataFactory.h DASValues.h EqualityHelper.h RefCountingObject.h SDOSPI.h TypeHelper.h XSDHelper.h 
